--- a/MyMap with MapView/MyMapWithMapView/MyMapWithMapView/app/src/main/res/layout/activity_main.xml
+++ b/MyMap with MapView/MyMapWithMapView/MyMapWithMapView/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/mapv" />
+        android:id="@+id/mapv"
+        android:contentDescription="@string/app_name"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
