--- a/MyFragmentApp/app/src/main/res/layout/fragment_map.xml
+++ b/MyFragmentApp/app/src/main/res/layout/fragment_map.xml
@@ -5,9 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".MapFragment">
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="mappa" />
+        android:text="mappa" />-->
+
+    <com.google.android.gms.maps.MapView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/mapv"
+        android:contentDescription="@string/app_name"/>
 
 </FrameLayout>
