si salva la foto ora

--- a/MyFragmentApp/app/src/main/res/layout/activity_insertplace.xml
+++ b/MyFragmentApp/app/src/main/res/layout/activity_insertplace.xml
@@ -9,22 +9,26 @@
     <ImageView
         android:id="@+id/myImage"
 
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="284dp"
+        android:layout_height="426dp"
         android:layout_marginBottom="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.457" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="256dp"
         android:layout_height="66dp"
         android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myImage"
+        app:layout_constraintVertical_bias="0.141"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="531dp" />
+        tools:layout_editor_absoluteX="77dp" />
 
     <Button
         android:id="@+id/buttonHome"
@@ -33,8 +37,21 @@
         android:text="Inserisci"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.789"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myImage"
+        app:layout_constraintVertical_bias="0.732"
         tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/buttonDownload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Download"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myImage"
+        app:layout_constraintVertical_bias="0.732"
+        tools:layout_editor_absoluteX="63dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
