--- a/Login con Firebase/PinSpotDemo/app/src/main/res/layout/activity_main.xml
+++ b/Login con Firebase/PinSpotDemo/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.main.MainActivity" >
 
     <!--<TextView
         android:layout_width="wrap_content"
@@ -76,5 +76,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.8" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
