--- a/testFirebase/app/src/main/res/layout/activity_main.xml
+++ b/testFirebase/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.664" />
 
+    <ImageView
+        android:id="@+id/everest"
+        android:layout_width="234dp"
+        android:layout_height="277dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.066"
+        app:srcCompat="@drawable/everest" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
