--- a/MyWeather/app/src/main/res/layout/activity_main.xml
+++ b/MyWeather/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,12 @@
         android:layout_marginTop="20dp"
         android:textSize="30sp"
         android:hint="Descrizione"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/descrizione2"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:textSize="30sp"
+        android:hint="Descrizione2"/>
 </LinearLayout>
