Aggiunto upload foto

--- a/MyUploadPicApp2/app/src/main/res/layout/activity_insert_pin.xml
+++ b/MyUploadPicApp2/app/src/main/res/layout/activity_insert_pin.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".InsertPinActivity">
 
+    <Button
+        android:id="@+id/uploadPic_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upload pic"
+        android:enabled="false"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.827" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="400dp"
@@ -29,5 +42,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.733" />
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:layout_width="0dp"
+        android:id="@+id/uploadProgressBar"
+        android:visibility="gone"
+        android:indeterminate="true"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.008" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
