Aggiunta selezione immagini da galleria

--- a/MyUploadPicApp2/app/src/main/res/layout/activity_insert_pin.xml
+++ b/MyUploadPicApp2/app/src/main/res/layout/activity_insert_pin.xml
@@ -7,6 +7,18 @@
     tools:context=".InsertPinActivity">
 
     <Button
+        android:id="@+id/choosePicFromLocal_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose from gallery"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.925" />
+
+    <Button
         android:id="@+id/uploadPic_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
