--- a/MyLoginApp-master/app/src/main/res/layout/insertpin.xml
+++ b/MyLoginApp-master/app/src/main/res/layout/insertpin.xml
@@ -52,6 +52,7 @@
         android:layout_margin="16dp"
         android:layout_marginStart="20dp"
         android:contentDescription="Spot a new place"
+        android:backgroundTint="@color/secondaryDarkColor"
         android:src="@drawable/library_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/takephoto"
@@ -69,6 +70,7 @@
         android:layout_margin="16dp"
         android:contentDescription="Spot a new place"
         android:src="@drawable/takephoto_foreground"
+        android:backgroundTint="@color/secondaryDarkColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -84,6 +86,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:contentDescription="Spot a new place"
+        android:backgroundTint="@color/secondaryDarkColor"
         android:src="@drawable/download_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,6 +124,7 @@
         android:drawablePadding="8dp"
         android:hint="Description"
         android:inputType="textPassword"
+        android:backgroundTint="@color/primaryLightColor"
         android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHighlight="@color/cardview_dark_background"
@@ -142,6 +146,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
+        android:backgroundTint="@color/secondaryDarkColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="0.182" />
