--- a/PinSpot/app/src/main/res/layout/fragment_map.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_map.xml
@@ -12,10 +12,12 @@
         android:text="mappa" />-->
 
     <com.google.android.gms.maps.MapView
+        android:id="@+id/mapv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/mapv"
-        android:contentDescription="@string/app_name"/>
+        android:contentDescription="@string/app_name"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-66dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -32,5 +34,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.86"
         app:maxImageSize="48dp" />
+
+    <Button
+        android:id="@+id/searchButton"
+        android:layout_width="74dp"
+        android:layout_height="66dp"
+        android:background="#00FFFFFF"
+        android:contentDescription="@string/app_name"
+        app:icon="@android:drawable/ic_search_category_default"
+        app:iconSize="28dp"
+        app:iconTint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
