--- a/MyLoginApp-master/app/src/main/res/layout/infopin.xml
+++ b/MyLoginApp-master/app/src/main/res/layout/infopin.xml
@@ -17,7 +17,6 @@
         android:layout_height="wrap_content"
         android:text="Pin of Duomo"
         android:textAlignment="center"
-       android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/download"
@@ -49,6 +48,7 @@
    android:layout_marginTop="10dp"
    android:layout_marginRight="120dp"
    android:contentDescription="Spot a new place"
+    android:backgroundTint="@color/secondaryDarkColor"
    android:src="@drawable/download_foreground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
@@ -61,12 +61,12 @@
 <TextView
    android:id="@+id/description"
    android:layout_width="298dp"
-   android:layout_height="108dp"
-   android:drawableLeft="@drawable/ic_baseline_info_24"
+   android:layout_height="108dp" android:background="@drawable/edit_text_bg"
+
+    android:drawableLeft="@drawable/ic_baseline_info_24"
    android:drawablePadding="8dp"
    android:hint="Description"
    android:inputType="textPassword"
-    android:background="@color/primaryLightColor"
    android:padding="8dp"
    android:textColor="@color/black"
    android:textColorHighlight="@color/cardview_dark_background"
@@ -86,6 +86,7 @@
    android:layout_margin="16dp"
    android:layout_marginStart="20dp"
    android:contentDescription="Spot a new place"
+    android:backgroundTint="@color/secondaryDarkColor"
    android:src="@drawable/favourite_foreground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +106,7 @@
    android:src="@drawable/direction_foreground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
+    android:backgroundTint="@color/secondaryDarkColor"
    app:layout_constraintHorizontal_bias="0.667"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
