--- a/MyLoginApp-master/app/src/main/res/layout/login.xml
+++ b/MyLoginApp-master/app/src/main/res/layout/login.xml
@@ -47,8 +47,7 @@
                 android:drawablePadding="8dp"
                 android:hint="Username"
                 android:padding="8dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                 />
 
             <EditText
                 android:id="@+id/password"
@@ -61,9 +60,8 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:padding="8dp"
-                android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
-                android:textColorHint="@color/white" />
+                 />
 
             <Button
                 android:id="@+id/loginButton"
@@ -86,8 +84,8 @@
         android:text="Not yet registered? SignUp Now"
         android:textSize="14sp"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:id="@+id/signupText"
-        android:textColor="@color/white"
         android:layout_marginBottom="5dp"/>
 
 
@@ -99,7 +97,8 @@
         android:layout_above="@id/socialicons"
         android:layout_centerHorizontal="true"
         android:text="or sign in with"
-        android:textColor="@color/white" />
+        android:textStyle="bold"
+         />
 
     <LinearLayout
         android:id="@+id/socialicons"
