--- a/MyLoginApp-master/app/src/main/res/values/themes.xml
+++ b/MyLoginApp-master/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyLoginApp" parent="Theme.Material3.Light">
+    <style name="Theme.MyLoginApp" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
