--- a/PinSpotConLayout/PinSpot/app/src/main/res/layout/fragment_map.xml
+++ b/PinSpotConLayout/PinSpot/app/src/main/res/layout/fragment_map.xml
@@ -25,6 +25,7 @@
         android:layout_margin="16dp"
         android:contentDescription="Spot a new place"
         android:src="@drawable/spot_place_foreground"
+        android:backgroundTint="@color/primaryColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
