--- a/PinSpotConLayout/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
+++ b/PinSpotConLayout/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
@@ -28,43 +28,32 @@ tools:context=".ui.main.PinInfoFragment">
     app:layout_constraintTop_toTopOf="@id/divider"
     app:layout_constraintVertical_bias="0.0" />
 
-<ImageView
-    android:id="@+id/rounded_bg3"
-    android:layout_width="297dp"
-    android:layout_height="634dp"
-    android:src="@drawable/rounded_corner"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="@id/divider"
-    app:layout_constraintVertical_bias="1.0" />
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="256dp"
+        android:layout_height="303dp"
+        android:layout_marginBottom="-80dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/roma"
+        app:layout_constraintBottom_toTopOf="@id/rounded_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-<ImageView
-    android:id="@+id/imageView2"
-    android:layout_width="256dp"
-    android:layout_height="303dp"
-    android:layout_marginBottom="-80dp"
-    android:scaleType="fitXY"
-    android:src="@drawable/roma"
-    app:layout_constraintBottom_toTopOf="@id/rounded_bg"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent" />
+    <TextView
+        android:id="@+id/PinTitle_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="4dp"
+        android:text="Duomo di milano"
+        android:textColor="@color/black"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView2" />
 
-<TextView
-    android:id="@+id/PinTitle_textView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="40dp"
-    android:layout_marginTop="20dp"
-    android:text="Duomo di milano"
-    android:textSize="35sp"
-    android:textStyle="bold"
-    android:textColor="@color/black"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/imageView2"/>
-
-<TextView
-    android:id="@+id/textViewTemperature"
+    <TextView
+    android:id="@+id/textViewWeatherDescription"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="40dp"
@@ -77,7 +66,7 @@ tools:context=".ui.main.PinInfoFragment">
     app:layout_constraintTop_toBottomOf="@id/imageView2" />
 
 <TextView
-    android:id="@+id/textViewWeatherDescription"
+    android:id="@+id/textViewTemperature"
     android:layout_width="72dp"
     android:layout_height="32dp"
     android:layout_marginStart="40dp"
@@ -89,26 +78,26 @@ tools:context=".ui.main.PinInfoFragment">
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/imageView2" />
 
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:id="@+id/addPinToFav_fab"
-    android:layout_width="wrap_content"
-    android:layout_height="66dp"
-    android:layout_gravity="end|bottom"
-    android:layout_margin="16dp"
-    android:layout_marginStart="20dp"
-    android:backgroundTint="@color/secondaryDarkColor"
-    android:contentDescription="Spot a new place"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addPinToFav_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="66dp"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:layout_marginStart="20dp"
+        android:backgroundTint="@color/white"
+        android:contentDescription="Spot a new place"
 
-    android:src="@drawable/favourite_foreground"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.937"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.651"
-    app:maxImageSize="48dp" />
+        android:src="@drawable/favourite_foreground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.937"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.005"
+        app:maxImageSize="48dp" />
 
-<com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/closePinInfo_button"
     android:layout_width="wrap_content"
     android:layout_height="112dp"
