--- a/PinSpot/app/src/main/res/layout/fragment_login.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_login.xml
@@ -153,5 +153,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/skipButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="skip"
+            app:layout_constraintBottom_toTopOf="@+id/button_login"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_forgot_login_password" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
