--- a/PinSpot/app/src/main/res/layout/fragment_fav_places.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_fav_places.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.FavPlacesFragment">
 
+    <TextView
+        android:id="@+id/LogInTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Loggati"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/fav_pin_recyclerview"
+        app:layout_constraintTop_toTopOf="@+id/fav_pin_recyclerview" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fav_pin_recyclerview"
         android:layout_width="match_parent"
