--- a/PinSpotConLayout/PinSpot/app/src/main/res/values/themes.xml
+++ b/PinSpotConLayout/PinSpot/app/src/main/res/values/themes.xml
@@ -24,5 +24,8 @@
         <item name="android:windowBackground">@drawable/splashscreensfondo</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
     </style>
+    <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/primaryDarkColor</item>
+    </style>
 </resources>
 
